--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,9 @@ section {
   padding: 100px 0 70px;
   text-align: center;
 }
+.about-1 {
+  padding-bottom: 70px;
+}
 .about .section-title {
   margin-bottom: 50px;
 }
@@ -365,14 +368,11 @@ section {
   height: 80%;
   width: 80%;
 }
-.video {
-}
 #video {
   overflow: hidden;
   padding-bottom: 56.25%;
   position: relative;
   height: 0;
-  padding-top: 70px;
 }
 #video iframe {
   left: 0;
