--- a/css/style.css
+++ b/css/style.css
@@ -358,8 +358,8 @@ section {
   padding: 100px 0 70px;
   text-align: center;
 }
-.about-1 {
-  padding-bottom: 70px;
+.video {
+  padding-top: 70px;
 }
 .about .section-title {
   margin-bottom: 50px;
