--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,12 @@ section {
   margin: 0 auto;
 }
 
+.tracklist {
+  width: 100%;
+  max-width: 640px;
+  margin: 0 auto;
+}
+
 button.mfp-close {
   display: block;
   top: -44px;
