--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,10 @@ section {
   position: relative;
   height: 100%;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .home-content h1,
