--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ section {
 }
 
 .about {
-  padding: 100px 0 70px;
+  padding-top: 100px;
   text-align: center;
 }
 
@@ -458,7 +458,7 @@ section {
 
 .about-2 {
   font-size: 18px;
-  padding: 30px 0px 70px 0px;
+  padding-top: 30px;
   text-align: justify;
 }
 
@@ -820,6 +820,16 @@ button.mfp-close:hover {
 .owl-dot:hover {
   background: 0 0;
   border-color: #fff;
+}
+
+.contact {
+  padding: 100px 0 70px;
+  text-align: center;
+}
+
+.btn {
+  font-size: 18px;
+  background-color: transparent;
 }
 
 .contact-background {
